added github link to footer

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 		<link href='http://fonts.googleapis.com/css?family=Lato:100' rel='stylesheet' type='text/css'>
 		<!-- CSS -->
 		<link rel="stylesheet" type="text/css" href="style.css">
+		<link rel="stylesheet" type="text/css" href="homepage.css">
 	</head>
 	<body ng-style="{'background-color':URL[2]}">
 		<div id="fb-root"></div>
@@ -77,7 +78,7 @@
 
 		</section>
 		<footer>
-				<p>sayincaps.com beta &copy; 2015</p>
+				<p><a href="http://www.sayincaps.com/">sayincaps.com</a> beta &copy; 2015 <a target="_blank" id="githubLink" href="https://github.com/Adrian-N/sayincaps.com">GitHub</a></p>
 			</footer>
 		<script>
 		 close = document.getElementById("close");
