refactoring css & added respond.js

--- a/index.html
+++ b/index.html
@@ -2,12 +2,14 @@
 <html ng-app>
 	<head>
 		<title>Say In Caps &#124; One Click Message Creator</title>
+
 		<!-- Meta -->
 		<meta charset="UTF-8">
 		<meta name="description" content="Say In Caps - One Click Message Creator">
 		<meta name="keywords" content="">
 		<meta name="author" content="Adrian Nowak">
 		<meta name="viewport" content="width=device-width, maximum-scale=1.0, minimum-scale=1.0, initial-scale=1.0" />
+
 		<!-- Scripts -->
 		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.3/angular.min.js"></script>
 		<script src="scripts/modernizr.custom.80028.js"></script>
@@ -23,11 +25,14 @@
 		  ga('create', 'UA-65894515-1', 'auto');
 		  ga('send', 'pageview');
 		</script>
+		<script src="scripts/respond.js"></script>
+
 		<!-- Fonts -->
 		<link href='http://fonts.googleapis.com/css?family=Lato:100' rel='stylesheet' type='text/css'>
+		
 		<!-- CSS -->
-		<link rel="stylesheet" type="text/css" href="style.css">
-		<link rel="stylesheet" type="text/css" href="homepage.css">
+		<link rel="stylesheet" type="text/css" href="css/global.css">
+		<link rel="stylesheet" type="text/css" href="css/homepage.css">
 	</head>
 	<body ng-style="{'background-color':URL[2]}">
 		<div id="fb-root"></div>
